Cherry-pick 258380@main (ee52175fab81). https://bugs.webkit.org/show_bug.cgi?id=249272

[WPE][GTK] Robustly handle subprocess leaks
    https://bugs.webkit.org/show_bug.cgi?id=249272

    Reviewed by Michael Catanzaro.

    Call _exit from a secondary thread after the connection is closed if the
    main thread doesn't exit in 10 seconds.

    * Source/WebKit/WebProcess/WebProcess.cpp:
    (WebKit::callExitSoon):
    (WebKit::WebProcess::initializeConnection):

    Canonical link: https://commits.webkit.org/258380@main